test: add beneficiary service tests and helpers